add deploy.Jenkinsfile and modify stage